--- a/public/css/adminlte-app.css
+++ b/public/css/adminlte-app.css
@@ -6482,5 +6482,8 @@ label,
 .checkbox label {
   font-weight: 300;
 }
+.form-control {
+  color: #222;
+}
 
 /*# sourceMappingURL=adminlte-app.css.map */
